1. 회원가입시 국적은 필수 요소로 수정 2. 프로필편집에서 목적을 변경할수 있도록 수정 3. 개인정보수정 창에서 국적을 볼수있도록 수정